<resources>
    <string name="app_name">projectI3</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="gps_coords">GPS coords:</string>
    <string name="inspections_list">Inspections List</string>
    <string name="history_of_inspections">History of Inspections</string>
    <string name="inspection_date">Inspection Date:</string>
    <string name="inspection_type">Inspection Type:</string>
    <string name="hazard_level">Hazard Level</string>
    <string name="critical_issues">Critical Issues:</string>
    <string name="non_critical_issues">Non-Critical Issues:</string>
    <string name="str_restaurant_name">Restaurant Name</string>
    <string name="str_num_issues"># of Issues found</string>
    <string name="str_haz_level">Hazard Level</string>
    <string name="str_how_long_ago">How long ago</string>
    <string name="str_recent_inspection_report">-----Recent Inspection Report-----</string>
    <string name="back">back</string>
    <string name="show_lists">Show Lists</string>
    <string name="hintMapSearch">Enter the name of the restaurant</string>
    <string name="return_to_map">Return to map</string>
    <string name="lowHazard">Low</string>
    <string name="moderateHazard">Moderate</string>
    <string name="highHazard">High</string>
    <string name="noHazard">None</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="date">Date</string>
    <string name="whatHazard">Hazard level</string>
    <string name="numIssues">Number of issues</string>
    <string name="routine">Routine</string>
    <string name="followup">Follow-Up</string>
    <string name="numCritFound">Number of critical issues found</string>
    <string name="numNonCritFound">Number of non-critical issue found</string>
    <string name="clickPeg">Click this peg for more information.</string>
    <string name="addressRecent">Address</string>
    <string name="mostRecent">most recent</string>
    <string name="newUpdate">New Update Available</string>
    <string name="wantUpdate">Would you like to update?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="downloadSpeed">Speed of download</string>
    <string name="perSecond">per second</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="downloadingData">Downloading Data</string>
    <string name="installingData">Installing Data</string>
    <string name="cancelUpdate">Cancel Update</string>
    <string name="curLocation">Current Location</string>
    <string name="currentLocation">This is where you are.</string>
    <string name="favorite">Favorite</string>
    <string name="none">None</string>
    <string name="days"> days</string>
    <string name="notAvailable">N/A</string>
    <string name="favsUpdate">One or More of your Favorite Restaurants has a new Inspection</string>
    <string name="seeFavs_">Would you like to see it?</string>
    <string name="loadingData">Loading Data</string>
</resources>