<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="130dp"
        android:layout_height="130dp" />

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/icon"
        android:text="@string/str_restaurant_name"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recentInspection"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/icon"
        android:text="@string/str_recent_inspection_report"
        android:textAllCaps="false"
        android:textColor="#364CC8"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/issues_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recentInspection"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/icon"
        android:text="@string/str_num_issues"
        android:textColor="#3E3C3C"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/hazard_icon"
        android:layout_below="@+id/issues_found"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/hazard_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issues_found"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/hazard_icon"
        android:text="@string/str_haz_level"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/icon"
        android:layout_below="@+id/hazard_icon"
        android:layout_marginTop="4dp"
        android:text="@string/str_how_long_ago"
        android:textColor="#3E3C3C"
        android:textSize="15sp" />

</RelativeLayout>
