<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Display_Inspection">
    <TextView
        android:id="@+id/dateInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspection_date"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>

    <View
        android:id="@+id/firstHoriSplit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/dateInspection" />

    <TextView
        android:id="@+id/typeInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspection_type"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/firstHoriSplit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>
    <View
        android:id="@+id/secondHoriSplit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/typeInspection" />

    <View
        android:id="@+id/verticalSplit"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/secondHoriSplit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="205dp"/>
    <View
        android:id="@+id/thirdHoriSplit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/verticalSplit" />
    <TextView
        android:id="@+id/critIssuesInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/critical_issues"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/secondHoriSplit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/nonCritIssuesInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_critical_issues"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/secondHoriSplit"
        app:layout_constraintLeft_toRightOf="@id/verticalSplit"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/hazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hazard_level"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/thirdHoriSplit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/hazardLevelTrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourthHoriSplit" />

    <View
        android:id="@+id/fourthHoriSplit"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/hazardLevel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/hazardSymbol"
        android:layout_width="119dp"
        android:layout_height="118dp"

        app:layout_constraintTop_toBottomOf="@id/thirdHoriSplit"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17.5dp"
        android:layout_marginRight="17.5dp"/>

    <ListView
        android:id="@+id/violationsListView"
        android:layout_width="400dp"
        android:layout_height="392dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hazardSymbol"
        android:layout_marginTop="7.5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
